# quadruped_nmpc_dcbf_duality

./: README.md
cbf_duality/cbf_controllers/: CMakeLists.txt  cbf_controllers_plugins.xml  package.xml
cbf_duality/cbf_controllers/config/: default.yaml  rviz.rviz  task.info
cbf_duality/cbf_controllers/include/cbf_controllers/: CbfControllers.h  cbf_controllers.h
cbf_duality/cbf_controllers/launch/: common.launch  load_dcbf_duality_controller.launch  load_duality_controller.launch
cbf_duality/cbf_controllers/src/: CbfControllers.cpp  legged_interface.cpp
cbf_duality/cbf_controllers/test/: dcbf_robot.launch  goal_sender.launch  obstacle_simple.launch  test_simple_dcbf.launch  test_simple_duality.launch  visualiser.cpp
cbf_duality/cbf_geometry/: CMakeLists.txt  package.xml
cbf_duality/cbf_geometry/include/cbf_geometry/: ConvexRegion2d.h  DistanceQp2d.h  convex_region_2d.h  distance_qp_2d.h
cbf_duality/cbf_geometry/src/: ConvexRegion2d.cpp  DistanceQp2d.cpp  convex_region_2d.cpp  distance_qp_2d.cpp
cbf_duality/cbf_geometry/test/: ConvexRegion2dTest.cpp  convex_region_2d_test.cpp
cbf_duality/cbf_interface/: CMakeLists.txt  package.xml
cbf_duality/cbf_interface/include/cbf_interface/: DCbfLeggedInterface.h  DcbfDuality.h  Duality.h  DualityInitializer.h  FactoryAccessHelper.h  Obstacle.h  ObstacleReceiver.h  SimpleObstacle.h  dcbf_duality.h  duality.h  factory_access_helper.h  initializer.h  legged_interface.h  obstacle.h  obstacle_receiver.h  simple_obstacle.h
cbf_duality/cbf_interface/src/: DCbfLeggedInterface.cpp  FactoryAccessHelper.cpp  ObstacleReceiver.cpp  factory_access_helper.cpp  legged_interface.cpp  obstacle_receiver.cpp
cbf_duality/cbf_msgs/: CMakeLists.txt  package.xml
cbf_duality/cbf_msgs/msg/: Distances.msg  Obstacle.msg  Polytopes.msg
legged_control/legged_controllers/config/: gait.info
