<?xml version="1.0"?>
<package format="2">
    <name>cbf_interface</name>
    <version>0.0.0</version>
    <description>cbf_interface</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>

    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- build_depend: dependencies only used in source files -->
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>
    <depend>legged_interface</depend>
    <depend>pinocchio</depend>
    <depend>cbf_geometry</depend>
    <depend>cbf_msgs</depend>

</package>
