<?xml version="1.0"?>
<package format="2">
    <name>cbf_msgs</name>
    <version>0.0.0</version>
    <description>cbf_msgs</description>
    <maintainer email="liaoqiayuan@gmail.com">qiayuan</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>message_generation</depend>
    <depend>std_msgs</depend>
    <depend>visualization_msgs</depend>

    <exec_depend>message_runtime</exec_depend>

</package>
